# Tenvra

./: .env.example  .gitattributes  .gitignore  .prettierignore  .tmp-issue12-comment.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FOUNDER_SUMMARY.sv.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  memory.md  package.json  pnpm-lock.yaml  turbo.json  user.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rfc.yml
.github/profile/: README.md
.github/workflows/: ci.yml  codeql.yml  dco.yml  vercel-deploy.yml  vercel-rollback.yml
.hermes/: CLAUDE.md  model-orchestration.md
apps/coordinator/: package.json  tsconfig.json
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json  vitest.config.ts
clients/compute/: go.mod
docs/: README.md
docs/adr/: 0001-monorepo-and-language-boundaries.md  0002-phase-isolation.md  0003-signed-declarative-jobs.md  0004-reputation-separation.md  0005-european-first-sovereignty.md  README.md
docs/architecture/: compute-protocol.md  system-architecture.md
docs/community/: moderation-policy.md  reputation-system.md
docs/economics/: economic-model.md
docs/legal/: ai-model-compliance-checklist.md  contributor-terms-outline.md  (+1 more)
infrastructure/: README.md
scripts/: verify.ps1  verify.sh
workers/verifier/: pyproject.toml
workers/verifier/src/tenvra_verifier/: __init__.py  cli.py
workers/verifier/tests/: test_health.py
(+73 files in other folders)
