[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "tenvra-verifier"
version = "0.0.0"
description = "Tenvra verification worker scaffold"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

[project.scripts]
tenvra-verifier = "tenvra_verifier.cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.17",
  "pytest>=8.4",
  "ruff>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tenvra_verifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
packages = ["tenvra_verifier"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
